Improved logging and object creation. Minor fixes.